<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Relay Remote</string>
    <string name="menu_settings">Settings</string>
    
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="toggle">Toggle</string>
    <string name="nullStr">null</string>
    <string name="okay">Okay</string>
    <string name="yes">Yes</string>
    <string name="nope">Nope</string>
    <string name="nevermind">Nevermind</string>
 	<string name="cancel">Cancel</string>
 	<string name="close">Close</string>
	<string name="exitBtn">Exit</string>
	<string name="no">No!</string>
	<string name="save">Save</string>
    <string name="whatsnew">What\'s New</string>
    <string name="about">About</string>
    
    <string name="addRelay">Add Relay</string>
    <string name="editRelay">Edit Relay</string>
    <string name="updateRelay">Update Relay</string>
    <string name="deleteRelay">Delete Relay</string>
    <string name="refreshRelays">Refresh Relays</string>
    <string name="addedRelay">Relay Added</string>
    <string name="editedRelay">Relay Updated</string>
    <string name="deletedRelay">Relay Deleted</string>
    <string name="allOn">Turn All On</string>
    <string name="allOff">Turn All Off</string>
    
    <string name="emptyText">No relays have been added yet.</string>
    <string name="pinLabel">Pin:</string>
    <string name="nameLabel">Name:</string>
    <string name="serverLabel">Server:</string>
    <string name="portLabel">Port:</string>
    
    <string-array name="pinSpinnerEntries">
        <item>Pin 5</item>
        <item>Pin 6</item>
        <item>Pin 7</item>
        <item>Pin 8</item>
        <item>Pin 9</item>
    </string-array>
    
    <string name="connServer">Connecting to server&#8230;</string>
    <string name="gettingStates">Getting relay states from server(s)&#8230;</string>
    
    <string name="deleteRelayTitle">Delete Relay</string>
    <string name="deleteDialog">Are you sure you want to delete relay \"%s\"?</string>

    <string name="emptyNameErrorTitle">No Name Entered</string>
    <string name="emptyNameError">The name field cannot be empty.</string>
    <string name="emptyServerErrorTitle">No Server Entered</string>
    <string name="emptyServerError">The server field cannot be empty.</string>
    <string name="emptyPortErrorTitle">No Port Entered</string>
    <string name="emptyPortError">The port field cannot be empty.</string>
    <string name="portRangeErrorTitle">Invalid Port</string>
    <string name="portRangeError">The port must be between 1 and 65535.</string>
    <string name="readIOErrorTitle">Read IO Error</string>
    <string name="readIOError">There was an error reading the saved servers from the disk.</string>
    <string name="writeIOErrorTitle">Write IO Error</string>
    <string name="writeIOError">There was error writing the server to the saved servers list. It will not be saved.</string>
    <string name="serverConnectErrorTitle">Network Error</string>
    <string name="serverConnectError">Unable to connect to server.</string>
    <string name="unknownHostErrorTitle">Network Error</string>
    <string name="unknownHostError">The specified server could not be found on the network.</string>
    <string name="serverCommErrorTitle">Server Error</string>
    <string name="serverCommError">The server sent unexpected data or no data at all.</string>
    <string name="closedConnErrorTitle">Server Closed Connection</string>
    <string name="closedConnError">The server unexpectedly closed the connection.</string>
    <string name="serverErrorTitle">Server Error</string>
    <string name="serverError">The server reported an error processing the data sent to it. Try again.</string>
    <string name="malformedDataErrorTitle">Malformed Data Error</string>
    <string name="malformedDataError">A background thread received malformed or unexpected data.</string>
    
    <string name="welcomeTitle">Welcome!</string>
   	<string name="aboutThisAppTitle">About This App</string>
	<string name="aboutThisAppText">
		<b>About this app</b>\n\t
			TODO
	
		\n\n<b>License</b>\n\t
			This application is open source software. It is free to distribute, modify, and use with the exception of it being made closed source and sold for 
			commercial purposes without the consent of the author.
	</string>
	
	<string name="changelogTitle">Changelog</string>
   	<string name="changelogText">
   		<b>Current Version: 1.0.0</b>
   		\n\n<b>1.0.0:</b>
   			\n\t-Initial release! :D
   	</string>

</resources>