<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <TextView android:id="@+id/pinSpinnerLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pinLabel" />

    <Spinner android:id="@+id/pinSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/pinSpinnerEntries" />

    <TextView android:id="@+id/addNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nameLabel" />

    <EditText android:id="@+id/addEditName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10" />

    <TextView android:id="@+id/addEditServerLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/serverLabel" />

    <EditText android:id="@+id/addEditServer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10" />

    <TextView android:id="@+id/addEditPortLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/portLabel" />

    <EditText android:id="@+id/addEditPort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:ems="10" />
    
    <Button android:id="@+id/addEditRelay"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/addRelay" />

</LinearLayout>